# walz

./: .gitignore  CLAUDE.md  PKGBUILD  package-lock.json  package.json  walz.desktop
.claude/: settings.local.json
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
