[package]
name = "walz"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
base64 = "0.22"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
dirs = "5"
image = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }
mpris-server = "0.8"
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
tokio = { version = "1", features = ["rt", "sync"] }
notify-rust = "4"

[profile.release]
strip = false
lto = true
